# housekeeper

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  MANIFEST.in  Pipfile  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/workflows/: black.yml  build_and_publish.yml  bumpversion.yml  coveralls.yml  push_branch_image.yml  pythonapp.yml
alembic/: env.py
alembic/versions/: 0411d9eb8b9f_add_is_started_field_for_cases.py  156d2138ea8b_re_initialize.py  17085dda2b9d_add_cleanup_date_tracker.py  1b0a755720b2_add_extra_data_table_to_replace_json_.py  2f5352038e54_add_link_between_sample_and_case.py  43018c296295_add_reference_genome_to_analysis_run.py  619fe6fe066c_update_cascading_rules.py  73ea6c072986_add_answered_out_field_to_runs.py  7ab7ab3d4f6e_add_data_archive_paths.py  9334201fec74_add_rerun_requested_field_to_case.py  ab7dc4d7408a_add_user_management.py  ac9547bfbf42_add_mark_for_cases_on_hold.py  b2893331b4d2_add_list_of_flowcells_to_sample.py  cd9166dd20cf_add_comment_field_to_case.py  d0eab2dee85a_remove_status_make_datetime_date.py  d1b57526951f_make_clean_up_field_datetime.py  d24304894201_initial_structure.py  e342985be691_add_link_between_sample_and_run.py  e5d3b6f4e074_initial_structure.py  eada86aa0b22_add_is_manual_field_to_case.py  eff3a487aa92_initial_structure.py  f1669dd42064_add_archive_table.py  f6b2c1186ec5_add_category_field_on_sample.py
docs/: add.md
housekeeper/: __init__.py  __main__.py  basecli.py  cli.py  constants.py  date.py  exc.py  export.py  files.py  include.py  initiate.py  parsemip.py
housekeeper/add/: core.py  schema.py
housekeeper/archive/: __init__.py  cli.py  commit.py  core.py  restore.py  tar.py  utils.py
housekeeper/cli/: add.py  base.py  core.py  delete.py  get.py  include.py  init.py  log.py  tables.py  utils.py
housekeeper/compile/: cli.py  core.py  restore.py  tar.py  utils.py
housekeeper/deliver/: rsync.py
housekeeper/pipelines/: cli.py
housekeeper/scripts/: decrypt.bash  encrypt.batch
housekeeper/server/: admin.py  api.py  app.py  ext.py
housekeeper/store/: __init__.py  api.py  base.py  bundle_filters.py  cli.py  core.py  database.py  file_filters.py  migrate.py  models.py  store.py  tag_filters.py  utils.py  version_bundle_filters.py  version_filters.py
pipelines/: mip.yaml
scripts/: README.md  delete_analyses.bash  fabfile.py  fcs_ls.bash  fcs_rm.bash  fix_bioit197.py  gpg-pigz.batch
tests/: conftest.py  helper_functions.py  test_date.py  test_include.py  test_initiate.py
(+191 files in other folders)
